[gd_scene load_steps=21 format=2]

[ext_resource path="res://ObstacleCourse_Part3/PlayerCharacter.tscn" type="PackedScene" id=1]
[ext_resource path="res://ObstacleCourse_Part3/obstacles/PushWall.tscn" type="PackedScene" id=2]
[ext_resource path="res://ObstacleCourse_Part3/obstacles/doors/PressurePlate.tscn" type="PackedScene" id=3]
[ext_resource path="res://ObstacleCourse_Part3/assets/finish.png" type="Texture" id=4]
[ext_resource path="res://ObstacleCourse_Part3/obstacles/doors/DoorVertical.tscn" type="PackedScene" id=5]
[ext_resource path="res://ObstacleCourse_Part3/obstacles/doors/DoorHorizontal.tscn" type="PackedScene" id=6]
[ext_resource path="res://ObstacleCourse_Part3/ObstacleCourse.gd" type="Script" id=7]
[ext_resource path="res://ObstacleCourse_Part3/Course.tscn" type="PackedScene" id=8]
[ext_resource path="res://ObstacleCourse_Part3/fonts/info_font.tres" type="DynamicFont" id=9]
[ext_resource path="res://ObstacleCourse_Part3/pickups/PickupSpeed.tscn" type="PackedScene" id=10]
[ext_resource path="res://ObstacleCourse_Part3/fonts/remaining_time_font.tres" type="DynamicFont" id=12]
[ext_resource path="res://ObstacleCourse_Part3/assets/Sparkle.tscn" type="PackedScene" id=13]
[ext_resource path="res://ObstacleCourse_Part3/pickups/PickupGhost.tscn" type="PackedScene" id=14]

[sub_resource type="RectangleShape2D" id=14]
extents = Vector2( 320, 32 )

[sub_resource type="Animation" id=7]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sparkle:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="Animation" id=8]
resource_name = "finish"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sparkle:emitting")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=10]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("UI/Info:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ "3" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UI/Info:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 3, 3 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("UI/Info:custom_fonts/font:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 512 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("UI/Info:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("UI/Info:rect_size")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1920, 1080 ) ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("UI/Fade:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("OverviewViewportContainer/Viewport/OverviewCamera2D:current")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("OverviewViewportContainer/Viewport/OverviewCamera2D:position")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 2219, -177 ) ]
}
tracks/8/type = "value"
tracks/8/path = NodePath("ViewportsRow/ViewportContainer/Viewport/Course/Finish/Sparkle:emitting")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=15]
resource_name = "course_overview"
length = 9.8
tracks/0/type = "value"
tracks/0/path = NodePath("UI/Info:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("OverviewViewportContainer/Viewport/OverviewCamera2D:current")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("OverviewViewportContainer/Viewport/OverviewCamera2D:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3.5, 3.6, 6.5, 6.6, 9.8 ),
"transitions": PoolRealArray( -2, 0, -2, 0, -2, 1 ),
"update": 0,
"values": [ Vector2( 4314, 623 ), Vector2( 3931, 2420 ), Vector2( 2576, 2501 ), Vector2( 1446, 2112 ), Vector2( 2809, 938 ), Vector2( 1919, 912 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("UI/Fade:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 1.1, 2.7, 3.6, 4.5, 5.7, 6.6, 7.5, 8.8, 9.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=13]
resource_name = "finish_game"
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("UI/Info:rect_scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UI/Info:rect_size")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1920, 1080 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("UI/Info:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("UI/Info:custom_fonts/font:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 128 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ViewportsRow/ViewportContainer/Viewport/Course/Finish/Sparkle:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Animation" id=11]
resource_name = "start_countdown"
length = 3.0
tracks/0/type = "value"
tracks/0/path = NodePath("UI/Info:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.9, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ "3", "2", "1" ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("UI/Info:rect_scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.9, 1, 1.9, 2, 3 ),
"transitions": PoolRealArray( 1, 0, 1, 0, 1, 1 ),
"update": 0,
"values": [ Vector2( 3, 3 ), Vector2( 1e-05, 1e-05 ), Vector2( 3, 3 ), Vector2( 1e-05, 1e-05 ), Vector2( 3, 3 ), Vector2( 1e-05, 1e-05 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("UI/Info:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("UI/Info:custom_fonts/font:size")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 512 ]
}
tracks/4/type = "method"
tracks/4/path = NodePath(".")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"values": [ {
"args": [  ],
"method": "show_split_screen"
}, {
"args": [  ],
"method": "start"
} ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("UI/Fade:modulate")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="ObstacleCourse" type="YSort"]
script = ExtResource( 7 )

[node name="ViewportsRow" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1920.0
margin_bottom = 1080.0
custom_constants/separation = 0

[node name="ViewportContainer" type="ViewportContainer" parent="ViewportsRow"]
margin_right = 960.0
margin_bottom = 1080.0
size_flags_horizontal = 3

[node name="Viewport" type="Viewport" parent="ViewportsRow/ViewportContainer"]
size = Vector2( 960, 1080 )
handle_input_locally = false
disable_3d = true
usage = 0
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="ViewportsRow/ViewportContainer/Viewport"]
position = Vector2( 395, 542 )
current = true

[node name="Course" parent="ViewportsRow/ViewportContainer/Viewport" instance=ExtResource( 8 )]

[node name="Obstacles" type="YSort" parent="ViewportsRow/ViewportContainer/Viewport/Course"]

[node name="PushWall" parent="ViewportsRow/ViewportContainer/Viewport/Course/Obstacles" instance=ExtResource( 2 )]
position = Vector2( 1472, 384 )

[node name="PushWall2" parent="ViewportsRow/ViewportContainer/Viewport/Course/Obstacles" instance=ExtResource( 2 )]
position = Vector2( 3136, 1920 )

[node name="PushWall3" parent="ViewportsRow/ViewportContainer/Viewport/Course/Obstacles" instance=ExtResource( 2 )]
position = Vector2( 4544, 384 )

[node name="PushWall4" parent="ViewportsRow/ViewportContainer/Viewport/Course/Obstacles" instance=ExtResource( 2 )]
position = Vector2( 960, 2816 )

[node name="PushWall5" parent="ViewportsRow/ViewportContainer/Viewport/Course/Obstacles" instance=ExtResource( 2 )]
position = Vector2( 4032, 1280 )

[node name="Doors" type="Node2D" parent="ViewportsRow/ViewportContainer/Viewport/Course"]

[node name="DoorPlate1" parent="ViewportsRow/ViewportContainer/Viewport/Course/Doors" instance=ExtResource( 3 )]
position = Vector2( 544, 704 )
open_time = 2.0

[node name="Door" parent="ViewportsRow/ViewportContainer/Viewport/Course/Doors/DoorPlate1" instance=ExtResource( 6 )]
position = Vector2( -224, 192 )

[node name="DoorPlate2" parent="ViewportsRow/ViewportContainer/Viewport/Course/Doors" instance=ExtResource( 3 )]
position = Vector2( 384, 1280 )
open_time = 4.0

[node name="Door" parent="ViewportsRow/ViewportContainer/Viewport/Course/Doors/DoorPlate2" instance=ExtResource( 5 )]
position = Vector2( 896, -832 )

[node name="DoorPlate3" parent="ViewportsRow/ViewportContainer/Viewport/Course/Doors" instance=ExtResource( 3 )]
position = Vector2( 3040, 832 )
open_time = 4.0

[node name="Door" parent="ViewportsRow/ViewportContainer/Viewport/Course/Doors/DoorPlate3" instance=ExtResource( 5 )]
position = Vector2( -224, 1152 )

[node name="DoorPlate4" parent="ViewportsRow/ViewportContainer/Viewport/Course/Doors" instance=ExtResource( 3 )]
position = Vector2( 4608, 1728 )
open_time = 2.0

[node name="Door" parent="ViewportsRow/ViewportContainer/Viewport/Course/Doors/DoorPlate4" instance=ExtResource( 6 )]
position = Vector2( 448, 832 )

[node name="Pickups" type="YSort" parent="ViewportsRow/ViewportContainer/Viewport/Course"]
position = Vector2( 0, -1 )

[node name="PickupGhost" parent="ViewportsRow/ViewportContainer/Viewport/Course/Pickups" instance=ExtResource( 14 )]
position = Vector2( 576, 1249 )

[node name="PickupGhost2" parent="ViewportsRow/ViewportContainer/Viewport/Course/Pickups" instance=ExtResource( 14 )]
position = Vector2( 3315, 868 )

[node name="PickupSpeed" parent="ViewportsRow/ViewportContainer/Viewport/Course/Pickups" instance=ExtResource( 10 )]
position = Vector2( 3932, 402 )

[node name="PickupSpeed2" parent="ViewportsRow/ViewportContainer/Viewport/Course/Pickups" instance=ExtResource( 10 )]
position = Vector2( 1504, 2305 )

[node name="PickupSpeed3" parent="ViewportsRow/ViewportContainer/Viewport/Course/Pickups" instance=ExtResource( 10 )]
position = Vector2( 2176, 1473 )

[node name="Finish" type="Area2D" parent="ViewportsRow/ViewportContainer/Viewport/Course"]
position = Vector2( 4992, 2688 )
collision_layer = 2
collision_mask = 2

[node name="Sprite" type="Sprite" parent="ViewportsRow/ViewportContainer/Viewport/Course/Finish"]
texture = ExtResource( 4 )
centered = false
region_enabled = true
region_rect = Rect2( 0, 0, 640, 64 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="ViewportsRow/ViewportContainer/Viewport/Course/Finish"]
position = Vector2( 320, 32 )
shape = SubResource( 14 )

[node name="Sparkle" parent="ViewportsRow/ViewportContainer/Viewport/Course/Finish" instance=ExtResource( 13 )]
position = Vector2( 320, 32 )
scale = Vector2( 4, 1 )
amount = 24
lifetime = 3.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="ViewportsRow/ViewportContainer/Viewport/Course/Finish"]
autoplay = "RESET"
anims/RESET = SubResource( 7 )
anims/finish = SubResource( 8 )

[node name="OffCourse" type="Area2D" parent="ViewportsRow/ViewportContainer/Viewport/Course" groups=["offcourse"]]
collision_mask = 0

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="ViewportsRow/ViewportContainer/Viewport/Course/OffCourse"]
position = Vector2( -3456, -1536 )
polygon = PoolVector2Array( 3456, 1408, 3456, 4864, 9216, 4864, 9216, 1408, 3552, 1408, 3584, 1664, 4736, 1664, 4736, 1856, 5120, 1856, 5120, 1664, 7040, 1664, 7040, 1792, 7680, 1792, 7680, 1920, 8064, 1920, 8064, 1792, 8320, 1792, 8320, 2176, 8576, 2176, 8576, 1920, 8704, 1920, 8704, 1664, 8960, 1664, 8960, 2048, 9088, 2048, 9088, 2240, 8960, 2240, 8960, 2368, 8832, 2368, 8832, 2496, 8320, 2496, 8320, 3008, 8192, 3008, 8192, 3456, 8320, 3456, 8320, 3712, 8576, 3712, 8576, 4096, 8832, 4096, 8832, 3968, 9088, 3968, 9088, 4416, 8960, 4416, 8960, 4672, 8448, 4672, 8448, 3840, 8320, 3840, 8320, 4032, 8064, 4032, 8064, 3904, 7936, 3904, 7936, 3840, 7808, 3840, 7808, 3904, 7040, 3904, 7040, 4288, 6912, 4288, 6912, 4672, 6272, 4672, 6272, 4608, 5888, 4608, 5888, 3904, 5632, 3904, 5632, 4160, 4736, 4160, 4736, 4480, 4224, 4480, 4224, 4544, 3840, 4544, 3840, 4352, 3968, 4352, 3968, 4096, 4096, 4096, 4096, 3168, 3840, 3168, 3840, 3040, 3712, 3040, 3712, 2368, 3584, 2368, 3584, 2176, 3712, 2176, 3712, 1984, 3584, 1984, 3584, 1664, 3552, 1408 )

[node name="CollisionPolygon2D2" type="CollisionPolygon2D" parent="ViewportsRow/ViewportContainer/Viewport/Course/OffCourse"]
position = Vector2( -3456, -1536 )
polygon = PoolVector2Array( 6144, 3520, 6272, 3584, 6784, 3584, 6784, 3840, 6400, 3840, 6400, 3968, 6144, 3968 )

[node name="CollisionPolygon2D3" type="CollisionPolygon2D" parent="ViewportsRow/ViewportContainer/Viewport/Course/OffCourse"]
position = Vector2( -3456, -1536 )
polygon = PoolVector2Array( 4224, 2496, 4608, 2496, 4608, 2368, 4736, 2368, 4736, 2048, 5120, 2048, 5120, 2112, 5632, 2112, 5632, 2240, 5888, 2240, 5888, 2944, 5760, 2944, 5760, 2816, 5376, 2816, 5376, 2944, 5248, 2944, 5248, 3136, 5760, 3136, 5760, 3264, 5888, 3264, 5888, 3264, 5888, 3712, 5632, 3712, 5632, 3584, 5120, 3584, 5120, 3712, 4480, 3712, 4480, 4160, 4608, 4160, 4608, 4352, 4224, 4352 )

[node name="CollisionPolygon2D4" type="CollisionPolygon2D" parent="ViewportsRow/ViewportContainer/Viewport/Course/OffCourse"]
position = Vector2( -3456, -1536 )
polygon = PoolVector2Array( 6272, 2880, 6400, 2880, 6400, 2496, 6528, 2496, 6528, 2624, 6656, 2624, 6656, 3136, 6784, 3136, 6784, 3456, 6272, 3456 )

[node name="CollisionPolygon2D5" type="CollisionPolygon2D" parent="ViewportsRow/ViewportContainer/Viewport/Course/OffCourse"]
position = Vector2( -3456, -1536 )
polygon = PoolVector2Array( 6016, 4160, 6016, 4480, 6656, 4480, 6656, 4288, 6400, 4288, 6400, 4160 )

[node name="CollisionPolygon2D6" type="CollisionPolygon2D" parent="ViewportsRow/ViewportContainer/Viewport/Course/OffCourse"]
position = Vector2( -3456, -1536 )
polygon = PoolVector2Array( 7040, 2880, 7040, 3456, 7168, 3456, 7168, 3584, 7296, 3584, 7296, 3712, 7808, 3712, 7808, 3584, 7936, 3584, 7936, 2880, 7808, 2944, 7168, 2944, 7168, 2880 )

[node name="CollisionPolygon2D7" type="CollisionPolygon2D" parent="ViewportsRow/ViewportContainer/Viewport/Course/OffCourse"]
position = Vector2( -3456, -1536 )
polygon = PoolVector2Array( 6272, 1856, 6272, 2048, 6656, 2048, 6656, 2304, 6912, 2304, 6912, 2432, 7040, 2432, 7040, 2688, 7168, 2688, 7168, 2816, 7808, 2816, 7808, 2560, 7936, 2560, 7936, 2432, 8064, 2432, 8064, 2048, 7680, 2048, 7680, 2112, 7168, 2112, 7168, 1984, 6784, 1984, 6784, 1856 )

[node name="CollisionPolygon2D8" type="CollisionPolygon2D" parent="ViewportsRow/ViewportContainer/Viewport/Course/OffCourse"]
polygon = PoolVector2Array( 384, 864, 384, 1152, 640, 1152, 640, 992, 512, 992, 512, 864 )

[node name="PlayerCharacter" parent="ViewportsRow/ViewportContainer/Viewport/Course" instance=ExtResource( 1 )]
position = Vector2( 395, 542 )

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="ViewportsRow/ViewportContainer/Viewport/Course/PlayerCharacter"]
remote_path = NodePath("../../../Camera2D")

[node name="PlayerCharacter2" parent="ViewportsRow/ViewportContainer/Viewport/Course" instance=ExtResource( 1 )]
position = Vector2( 625, 472 )

[node name="RemoteTransform2D2" type="RemoteTransform2D" parent="ViewportsRow/ViewportContainer/Viewport/Course/PlayerCharacter2"]
position = Vector2( -230, 70 )
remote_path = NodePath("../../../../../ViewportContainer2/Viewport/Camera2D")

[node name="ViewportContainer2" type="ViewportContainer" parent="ViewportsRow"]
margin_left = 960.0
margin_right = 1920.0
margin_bottom = 1080.0
size_flags_horizontal = 3

[node name="Viewport" type="Viewport" parent="ViewportsRow/ViewportContainer2"]
size = Vector2( 960, 1080 )
handle_input_locally = false
disable_3d = true
usage = 0
render_target_update_mode = 3

[node name="Camera2D" type="Camera2D" parent="ViewportsRow/ViewportContainer2/Viewport"]
position = Vector2( 395, 542 )
current = true

[node name="OverviewViewportContainer" type="ViewportContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1920.0
margin_bottom = 1080.0

[node name="Viewport" type="Viewport" parent="OverviewViewportContainer"]
size = Vector2( 1920, 1080 )
handle_input_locally = false
disable_3d = true
usage = 0
render_target_update_mode = 3

[node name="OverviewCamera2D" type="Camera2D" parent="OverviewViewportContainer/Viewport"]
pause_mode = 1
position = Vector2( 2219, -177 )
current = true
zoom = Vector2( 2, 2 )

[node name="UI" type="CanvasLayer" parent="."]
layer = 2

[node name="Info" type="Label" parent="UI"]
pause_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 1920, 1080 )
rect_scale = Vector2( 3, 3 )
rect_pivot_offset = Vector2( 960, 540 )
custom_fonts/font = ExtResource( 9 )
text = "3"
align = 1
valign = 1

[node name="RemainingTime" type="Label" parent="UI"]
pause_mode = 1
margin_right = 1920.0
margin_bottom = 1080.0
rect_min_size = Vector2( 1920, 1080 )
custom_fonts/font = ExtResource( 12 )
text = "0.00"
align = 2

[node name="Fade" type="ColorRect" parent="UI"]
pause_mode = 1
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0.0352941, 0.0392157, 0.12549, 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 20.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
pause_mode = 1
anims/RESET = SubResource( 10 )
anims/course_overview = SubResource( 15 )
anims/finish_game = SubResource( 13 )
anims/start_countdown = SubResource( 11 )
